--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -1,4 +1,4 @@
-\title{ An optimization approach to segment breast lesions in ultra-sound images using clinically validated visual cues }
+\title{Classification of \acs*{sdoct} volumes with \acs*{lbp}: application to \acs*{dme} detection}
 \titlerunning{Optimization approach to BUS lesion segmentation}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
