Added conclusions and finished Abstract

--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -1,8 +1,34 @@
 % % include the figures path relative to the master file
 % \graphicspath{ {./content/results/figures/} }
 
+% \begin{tikzpicture}
+%   \node (t1) [shape=rectangle,draw] {
+%     % \begin{table}
+%     % \caption{Obtained results using SERI data sets using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
+%     % \centering
+%     \begin{tabular}{lcclcclcccclcclcccclcclc}
+%     \toprule
+%     Features 	& & &\multicolumn{4}{c}{$8^{riu2}$}&	 & & & &\multicolumn{4}{c}{$16^{riu2}$}& & & & &\multicolumn{4}{c}{$24^{riu2}$} &\\
+%       \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
+%             & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
+%     \midrule
+%         \ac{lbp}					& & & 43.75 & & & 43.75 & & & & & 37.50 & & & 50.00 & & & & & 50.00 & & & 62.50 & \\	
+%       \ac{lbptop}				& & & 56.25 & & & 62.50 & & & & & \textbf{87.50} & & & \textbf{75.00} & & & & & 68.75 & & & 68.75 & \\	
+%       \ac{lbp}+\ac{pca}		& & & 50.00 & & & 62.50 & & & & & 56.25 & & & 37.50 & & & & & 68.75 & & & 68.75 & \\
+%       \ac{lbp}+\ac{bow}		& & & 50.00 & & & 81.25 & & & & & 57.50 & & & 68.75 & & & & & 50.00 & & & 50.00 & \\
+%       \ac{lbp}+\ac{bow}+\acs{sw}		& & & 75.00 & & & 87.50 & & & & & \textbf{81.25} & & & \textbf{75.00} & & & & & 68.75 & & & 62.5 & \\
+%       \ac{lbptop}+\ac{bow}+\acs{sw}		& & & 62.50 & & & 68.75 & & & & & 56.25 & & & 37.50 & & & & & 37.50 & & & 43.75 & \\
+%     \bottomrule
+%     \end{tabular}
+%     % \label{tab:SERI-data}
+%     % \end{table}
+%     };
+% \end{tikzpicture}
+
+\begin{tiny}
+
 \begin{table}
-\caption{Obtained results using SERI data sets using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
+\caption{Obtained results using SERI datasets.}% using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
 \toprule
@@ -23,7 +49,7 @@ Features 	& & &\multicolumn{4}{c}{$8^{riu2}$}&	 & & & &\multicolumn{4}{c}{$16^{r
 
 
 \begin{table}
-\caption{Obtained results using Duke data sets using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
+\caption{Obtained results using Duke datasets.}% using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
 \toprule
@@ -42,13 +68,8 @@ Features 	& & &\multicolumn{4}{c}{$8^{riu2}$}&	 & & & &\multicolumn{4}{c}{$16^{r
 
 
 
-
-
-
-
-
 \begin{table}
-\caption{Comparing the proposed method by \cite{Venhuizen2015} on SERI and Duke data sets with the \textbf{our two} best proposed methods. $K$ = 32 and \ac{rf} is trained using 100 tress}
+\caption{Comparing the proposed method by \cite{Venhuizen2015} on SERI and Duke datasets.}% with the \textbf{our two} best proposed methods. $K$ = 32 and \ac{rf} is trained using 100 tress}
 \centering
 \begin{tabular}{lcclcclcccclcclc}
 \toprule
@@ -65,6 +86,8 @@ Data sets 	& & &\multicolumn{4}{c}{SERI}& & & & &\multicolumn{4}{c}{Duke} & \\
 \end{tabular}
 \label{tab:ComparisonRefandOurs}
 \end{table}
+
+\end{tiny}
 
 %----------
 
