--- a/master.tex
+++ b/master.tex
@@ -16,8 +16,9 @@
 \begin{abstract}
 This paper addresses the problem of automatic classification of \ac{sdoct} data for automatic identification of patients with \ac{dme} versus normal subjects.
 Our method is based on \ac{lbp} features to describe the texture of \ac{oct} images and we compare different \ac{lbp} features extraction approaches to compute a single signature for the whole \ac{oct} volume.
-Experimental results with two datasets of respectively 32 and 30 \ac{oct} volumes show that ...(TB BE WRITTEN BASED ON RESULTS)
-
+Experimental results with two datasets of respectively 32 and 30 \ac{oct} volumes show that
+regardless of using low or high level representations, features derived from \ac{lbp} texture have highly discriminative power.% for the task on hand.
+ 
 Moreover, the experiments show that the proposed method achieves better classification performances than other recent published works.
 
 \keywords{\acl{dme}, \acl{oct}, \acs{dme}, \acs{oct}, \ac{lbp}.}
@@ -30,8 +31,17 @@ Moreover, the experiments show that the proposed method achieves better classifi
 \input{content/experiment/experiment}
 \input{content/results/results}
 
-
 \section{Conclusions}
+The work presented here addresses the automatic classification of \ac{sdoct} data to identify subjects with \ac{dme} versus normal.
+Based on the reported results, the low level volume 3D features and high level 2D features using patches achieve the most desirable results in the experimental setup presented here.
+The comparison against different datasets and methodologies, highlights that:
+regardless of using low or high level representations, volume signatures derived from \ac{lbp} texture show high discriminative power for distinguishing \ac{dme} vs normal volumes.
+
+%TOMORROW THE MOON !!
+
+
+% Our method is based on \ac{lbp} features to describe the texture of \ac{oct} images and we compare different \ac{lbp} features extraction approaches to compute a single signature for the whole \ac{oct} volume.
+
 
 \bibliography{./content/literature_review}   %>>>> bibliography data in report.bib
 \bibliographystyle{splncs03}
