--- a/master.tex
+++ b/master.tex
@@ -42,7 +42,7 @@ regardless of using low or high level representations, volume signatures derived
 
 % Our method is based on \ac{lbp} features to describe the texture of \ac{oct} images and we compare different \ac{lbp} features extraction approaches to compute a single signature for the whole \ac{oct} volume.
 
-
+\vspace{-.2cm}
 \bibliography{./content/literature_review}   %>>>> bibliography data in report.bib
 \bibliographystyle{splncs03}
 
